--- a/package.json
+++ b/package.json
@@ -16,26 +16,56 @@
   "author": "NITSMUN",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.19",
     "@types/node": "^20.8.5",
+    "@types/passport": "^1.0.13",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dompurify": "^3.0.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.1",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "jsdom": "^22.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.43",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.6.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.3",
+    "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
+    "@types/dompurify": "^3.0.4",
     "@types/eslint": "^8.44.4",
-    "@types/express": "^4.17.16",
+    "@types/express": "^4.17.19",
+    "@types/express-session": "^1.17.8",
+    "@types/jsdom": "^21.1.4",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/mongo-sanitize": "^1.0.2",
     "@types/morgan": "^1.9.6",
     "@types/node": "^18.11.18",
+    "@types/node-cron": "^3.0.10",
+    "@types/nodemailer": "^6.4.13",
+    "@types/passport-google-oauth2": "^0.1.6",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.4",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "esbuild": "^0.17.19",
